@@ -1116,6 +1116,12 @@
         <branch name="HEAD"/>
         <regenerate/>
       </component>
+      <component name="gimp-tips" dir="gimp">
+        <podir dir="tips"/>
+        <potname name="gimp14-tips.pot"/>
+        <branch name="HEAD"/>
+        <regenerate/>
+      </component>
     </version>
   </module>
   <module name="gip">
