@@ -1,3 +1,7 @@
+2003-02-09  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Added gimp-tips to 2.1-extras.
+
 2003-02-07  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: Moved gcalctool and zenity to
